# shrug

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  USER-MANUALl.md  demo.tape  record-demo.ps1
.carl/research/: cli-performance-optimization.md
.carl/sessions/: 101208fd-1a92-4514-a1df-10d5b6971c26.json  51759050-bb36-4db1-82de-f1e4091050ba.json  53e95b36-7e47-46c4-acc3-a19958a736d6.json  68c851b3-fa01-4700-960f-a633eb98bd21.json  b6e6157b-678d-4b04-b61e-c45c7cb9cad3.json
.claude/: settings.json  settings.local.json
.claude/hooks/: carl-hook.py
.claude/paul-framework/workflows/: init-project.md  plan-phase.md  unify-phase.md
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  e2e.yml  release.yml
.paul/: HANDOFF-2026-03-21-session3.md  HANDOFF-2026-03-21.md  HANDOFF-2026-03-23.md  MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md  config.md  paul.json
.paul/handoffs/archive/: HANDOFF-2026-03-21-session2.md  HANDOFF-2026-03-21-session4.md  HANDOFF-2026-03-21-session5.md  HANDOFF-2026-03-21-session6.md  HANDOFF-2026-03-21-session7.md  HANDOFF-2026-03-21-session8.md  HANDOFF-2026-03-21-session9.md  HANDOFF-2026-03-23-phase14.md  HANDOFF-2026-03-23-phase18.md  HANDOFF-2026-03-23-v03.md
.paul/milestones/: v0.1.0-ROADMAP.md  v0.2.0-ROADMAP.md  v0.3.0-ROADMAP.md  v0.5.0-ROADMAP.md
.paul/phases/01-project-foundation/: 01-01-AUDIT.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-AUDIT.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-AUDIT.md  01-03-PLAN.md  01-03-SUMMARY.md
.paul/phases/02-openapi-spec-engine/: 02-01-AUDIT.md  02-01-PLAN.md  02-01-SUMMARY.md  02-02-AUDIT.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-AUDIT.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-AUDIT.md  02-04-PLAN.md  02-04-SUMMARY.md
.paul/phases/03-dynamic-command-tree/: 03-01-AUDIT.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-AUDIT.md  03-02-PLAN.md  03-02-SUMMARY.md
.paul/research/: atlassian-data-formats.md  atlassian-openapi-specs.md  cli-design-best-practices.md  cross-platform-support.md  dynamic-cli-performance.md  google-workspace-cli-architecture.md
assets/: demo.tape
docs/: confluence-content-details.md  confluence-pages.md  confluence-spaces.md  jira-admin.md  jira-core.md  jira-fields.md  jira-issue-bulk.md  jira-issue-details.md  jira-projects.md  jira-screens.md  jira-types-and-schemes.md  jira-users-and-permissions.md  jira-workflows.md  jsw-boards-sprints.md  jsw-devops.md  overview.md
scripts/: install.ps1  install.sh  release.sh
skills/jira-confluence-cli/: SKILL.md
src/: adf.rs  cli.rs  completions.rs  config.rs  dynamic_completions.rs  error.rs  executor.rs  exit_codes.rs  helpers.rs  install_skill.rs  jql.rs  lib.rs  logging.rs  main.rs  markdown_to_adf.rs  markdown_to_storage.rs  output.rs  quirks.rs  resolve.rs
src/auth/: credentials.rs  mod.rs  oauth.rs  profile.rs
src/cli/: auth.rs  confluence.rs  global.rs  install_skill.rs  jira.rs  jsw.rs  mod.rs  profile.rs  template.rs
src/cmd/: crud.rs  mod.rs  router.rs  tree.rs
src/confluence/: custom_content.rs  database.rs  folder.rs  mod.rs  search.rs  smart_link.rs  task.rs  whiteboard.rs
src/content/: adf.rs  jql.rs  markdown_to_adf.rs  markdown_to_storage.rs  mod.rs
src/core/: config.rs  error.rs  exit_codes.rs  http.rs  mod.rs  output.rs  pagination.rs  quirks.rs  web.rs
src/handlers/: auth.rs  cache.rs  mod.rs  product.rs  profile.rs
src/jira/: audit.rs  dashboard.rs  filter.rs  label.rs  mod.rs  search.rs
src/jsw/: board.rs  epic.rs  mod.rs  sprint.rs
src/spec/: analysis.rs  cache.rs  mod.rs  model.rs  parser.rs  registry.rs  swagger.rs
src/template/: confluence.rs  jira.rs  jsw.rs  mod.rs
tests/: integration.rs
tests/e2e/: auth.rs  confluence.rs  features.rs  fixtures.rs  harness.rs  jira.rs  jira_software.rs  main.rs  smoke.rs
tests/fixtures/: jira_create_issue.json  jira_error_401.json  jira_search.json  jira_test_spec.json  jira_transitions.json
tests/live/: auth.rs  confluence.rs  features.rs  fixtures.rs  harness.rs  jira.rs  jira_software.rs  main.rs  smoke.rs
tests/mocked/: confluence_blogpost.rs  confluence_custom_content.rs  confluence_database.rs  confluence_folder.rs  confluence_page.rs  confluence_page_attachment.rs  confluence_page_comment.rs  confluence_page_label.rs  confluence_page_like.rs  confluence_page_property.rs  confluence_page_restriction.rs  confluence_page_version.rs  confluence_search.rs  confluence_smart_link.rs  confluence_space.rs  confluence_space_property.rs  confluence_task.rs  confluence_whiteboard.rs  helpers.rs  jira_audit.rs  jira_dashboard.rs  jira_filter.rs  jira_issue.rs  jira_issue_attachment.rs  jira_issue_comment.rs  jira_issue_link.rs  jira_issue_property.rs  jira_issue_remote_link.rs  jira_issue_watcher.rs  jira_issue_worklog.rs  jira_label.rs  jira_project.rs  jira_project_component.rs  jira_project_version.rs  jira_search.rs  jsw_board.rs  jsw_epic.rs  jsw_sprint.rs  main.rs
tests/smoke/: error_messages.rs  fixtures.rs  global_flags.rs  harness.rs  help_messages.rs  live_api.rs  main.rs  static_commands.rs  validation.rs
(+140 files in other folders)
