[package]
name = "shrug"
version = "1.0.0"
edition = "2021"
description = "A static CLI for Atlassian Cloud"
license = "MIT"
repository = "https://github.com/mfassaie/shrug"
readme = "README.md"
keywords = ["atlassian", "jira", "confluence", "cli", "cloud"]
categories = ["command-line-utilities"]
rust-version = "1.90"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
owo-colors = "4"
enable-ansi-support = "0.2"
ctrlc = "3"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["windows-native"] }
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
rand = "0.9"
rpassword = "7"
sha2 = "0.10"
url = "2"
open = "5"
dialoguer = "0.11"
comfy-table = "7"
csv = "1"
is-terminal = "0.4"
pulldown-cmark = "0.13"
strsim = "0.11"
rkyv = { version = "0.8", features = ["bytecheck"] }
include_dir = "0.7"

[dev-dependencies]
assert_cmd = "2"
httpmock = "0.8"
insta = "1"
predicates = "3"
serde_json = "1"
tempfile = "3"
which = "7"

[lints.rust]
unsafe_code = "forbid"

[[test]]
name = "mocked"
path = "tests/mocked/main.rs"

[[test]]
name = "live"
path = "tests/live/main.rs"
